Fix navigaton background gradient for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ NAVIGATION
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0)) transparent;
+  background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9) 60%, rgba(0, 0, 0, 0)) transparent;
   font-size: 200%;
   z-index: 2;
 }
